# DOCPROS

./: index.html  package-lock.json  package.json  vite.config.ts
public/: manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/migrations/: 001_initial_schema.sql
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx
src/features/cgu/: CguAcceptanceScreen.tsx
src/features/clients/: ClientForm.tsx  ClientsPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/invoices/: InvoiceDetail.tsx  InvoiceForm.tsx  InvoicesPage.tsx
src/features/onboarding/: OnboardingWizard.tsx
src/features/quotes/: QuoteDetail.tsx  QuoteForm.tsx  QuotesPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/db/: clients.ts  connection.ts  invoices.ts  mappers.ts  numbering.ts  quotes.ts  settings.ts  storage.ts
src/lib/export/: backupRestore.ts  csvExport.ts
src/lib/pdf/: invoiceTemplate.ts  pdfGenerator.ts  quoteTemplate.ts
src/lib/utils/: calculations.ts  formatCurrency.ts  formatDate.ts
src/lib/validation/: siretValidation.ts
src/stores/: useSettingsStore.ts
src/types/: client.ts  invoice.ts  lineItem.ts  quote.ts  settings.ts
